[project]
name = "section-4"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
